<resources>
    <string name="app_name">Petductivity</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="drawer_opened">Opened</string>
    <string name="drawer_closed">Closed</string>
    <string-array name="achievement_names">
        <item>placeholder</item>
        <item>Bulbasaur</item>
        <item>Ivysaur</item>
        <item>Venusaur</item>
        <item>Charmander</item>
        <item>Charmeleon</item>
        <item>Charizard</item>
        <item>Squirtle</item>
        <item>Wartortle</item>
        <item>Blastoise</item>
        <item>Caterpie</item>
        <item>Metapod</item>
        <item>Butterfree</item>
        <item>Weedle</item>
        <item>Kakuna</item>
        <item>Beedrill</item>
        <item>Pidgey</item>
        <item>Pidgeotto</item>
        <item>Pidgeot</item>
        <item>Rattata</item>
        <item>Raticate</item>
        <item>Spearow</item>
        <item>Fearow</item>
        <item>Ekans</item>
        <item>Arbok</item>
        <item>Pikachu</item>
        <item>Raichu</item>
        <item>Sandshrew</item>
        <item>Sandslash</item>
        <item>Nidoran</item>
        <item>Nidorina</item>
        <item>Nidoqueen</item>
        <item>Nidoran</item>
        <item>Nidorino</item>
        <item>Nidoking</item>
        <item>Clefairy</item>
        <item>Clefable</item>
        <item>Vulpix</item>
        <item>Ninetales</item>
        <item>Jigglypuff</item>
        <item>Wigglytuff</item>
        <item>Zubat</item>
        <item>Golbat</item>
        <item>Oddish</item>
        <item>Gloom</item>
        <item>Vileplume</item>
        <item>Paras</item>
        <item>Parasect</item>
        <item>Venonat</item>
        <item>Venomoth</item>
        <item>Diglett</item>
        <item>Dugtrio</item>
        <item>Meowth</item>
        <item>Persian</item>
        <item>Psyduck</item>
        <item>Golduck</item>
        <item>Mankey</item>
        <item>Primeape</item>
        <item>Growlithe</item>
        <item>Arcanine</item>
        <item>Poliwag</item>
        <item>Poliwhirl</item>
        <item>Poliwrath</item>
        <item>Abra</item>
        <item>Kadabra</item>
        <item>Alakazam</item>
        <item>Machop</item>
        <item>Machoke</item>
        <item>Machamp</item>
        <item>Bellsprout</item>
        <item>Weepinbell</item>
        <item>Victreebel</item>
        <item>Tentacool</item>
        <item>Tentacruel</item>
        <item>Geodude</item>
        <item>Graveler</item>
        <item>Golem</item>
        <item>Ponyta</item>
        <item>Rapidash</item>
        <item>Slowpoke</item>
        <item>Slowbro</item>
        <item>Magnemite</item>
        <item>Magneton</item>
        <item>Farfetchd</item>
        <item>Doduo</item>
        <item>Dodrio</item>
        <item>Seel</item>
        <item>Dewgong</item>
        <item>Grimer</item>
        <item>Muk</item>
        <item>Shellder</item>
        <item>Cloyster</item>
        <item>Gastly</item>
        <item>Haunter</item>
        <item>Gengar</item>
        <item>Onix</item>
        <item>Drowzee</item>
        <item>Hypno</item>
        <item>Krabby</item>
        <item>Kingler</item>
        <item>Voltorb</item>
        <item>Electrode</item>
        <item>Exeggcute</item>
        <item>Exeggutor</item>
        <item>Cubone</item>
        <item>Marowak</item>
        <item>Hitmonlee</item>
        <item>Hitmonchan</item>
        <item>Lickitung</item>
        <item>Koffing</item>
        <item>Weezing</item>
        <item>Rhyhorn</item>
        <item>Rhydon</item>
        <item>Chansey</item>
        <item>Tangela</item>
        <item>Kangaskhan</item>
        <item>Horse</item>
        <item>Seadra</item>
        <item>Goldeen</item>
        <item>Seaking</item>
        <item>Staryu</item>
        <item>Starmie</item>
        <item>Mr. Mine</item>
        <item>Scyther</item>
        <item>Jynx</item>
        <item>Electabuzz</item>
        <item>Magmar</item>
        <item>Pinsir</item>
        <item>Tauros</item>
        <item>Magikarp</item>
        <item>Gyarados</item>
        <item>Lapras</item>
        <item>Ditto</item>
        <item>Eevee</item>
        <item>Vaporeon</item>
        <item>Jolteon</item>
        <item>Flareon</item>
        <item>Porygon</item>
        <item>Omanyte</item>
        <item>Omastar</item>
        <item>Kabuto</item>
        <item>Kabutops</item>
        <item>Aerodactyl</item>
        <item>Snorlax</item>
        <item>Articuno</item>
        <item>Zapdos</item>
        <item>Moltres</item>
        <item>Dratini</item>
        <item>Dragonair</item>
        <item>Dragonite</item>
        <item>Mewtwo</item>
        <item>Mew</item>
    </string-array>
    <string name="Help_How_To_Use">
        My Planner - My Planner feature can be used for long term planning of your daily activities.
        You will be able to organise and plan your day effectively.
        You can add, edit and delete them easily.
        Simply click on the date you wish to plan activities for, and you will be brought into the weekly view.
        From there, click on the button with a plus sign to add new activities to your day.
        To edit or delete the activity, just tap on the activity you wish to edit or delete.
        Once you have successfully completed the activity, check the checkbox on the left hand side so that your pet can receive experience points and evolve.\n \n

        Important Tasks - Important Tasks feature can be used for short term or immediate tasks planning.
        It works similarly to My Planner feature, except that this requires you to set the due date of your task instead of its duration.\n \n

        My Pets - My Pets features allows you to see your pet.
        Track your progress and see how productive you have been, indicated by the level of your pet.\n \n

        Achievements - This feature allows you to see the lists of badges you have earned.\n \n

        Leaderboard - Allows you to check your ranking among all Petductivity app users.\n \n

        Focus Mode - Unique to our app, this feature unlocks when you successfully complete all tasks planned for a day.
        Upon unlocking focus mode, you get bonus experience points, which scales based on the durations of the tasks you have completed for the day.
        By being more productive, it helps you to level up and evolve your pet faster! On top of that, you get to earn additional rewards for unlocking focus mode!
    </string>
    <string name="Help_How_Many_Badges">
        Currently, only the Kanto Region Pokemon (total of 151 shiny and 151 non-shiny) are available.
    </string>
    <string name="How_to_get_more_badges">
        Every time you complete a task or unlock focus mode, you get a chance to unlock a new badge.\n\n
        The badges are awarded randomly, therefore, even if you have already unlocked a specific badge, you can still unlock the same badge again.
    </string>
    <string name="Petductivity_Email">
        <a href="teampetductivity@gmail.com">teampetductivity@gmail.com</a>
    </string>
    <string name="About_leveling">
        Bulbasaur, Charmander and Squirtle will evolve at level 30 and level 60.
        However, Pikachu will never evolve.
    </string>
    <string name="Not_Getting_Exp">
        In order to receive experience points or to be awarded a badge, you have to complete a task that is at least 30 minutes long.
    </string>
</resources>